--- a/src/main/kotlin/org/wfanet/measurement/reporting/service/api/v2alpha/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/reporting/service/api/v2alpha/BUILD.bazel
@@ -398,6 +398,7 @@ kt_jvm_library(
         "//src/main/proto/wfa/measurement/internal/reporting/v2:basic_report_result_details_kt_jvm_proto",
         "//src/main/proto/wfa/measurement/internal/reporting/v2:event_filter_kt_jvm_proto",
         "//src/main/proto/wfa/measurement/internal/reporting/v2:event_template_field_kt_jvm_proto",
+        "//src/main/proto/wfa/measurement/internal/reporting/v2:impression_qualification_filter_kt_jvm_proto",
         "//src/main/proto/wfa/measurement/internal/reporting/v2:impression_qualification_filter_spec_kt_jvm_proto",
         "//src/main/proto/wfa/measurement/internal/reporting/v2:metric_frequency_spec_kt_jvm_proto",
         "//src/main/proto/wfa/measurement/internal/reporting/v2:reporting_impression_qualification_filter_kt_jvm_proto",
@@ -406,11 +407,32 @@ kt_jvm_library(
         "//src/main/proto/wfa/measurement/reporting/v2alpha:basic_report_kt_jvm_proto",
         "//src/main/proto/wfa/measurement/reporting/v2alpha:event_filter_kt_jvm_proto",
         "//src/main/proto/wfa/measurement/reporting/v2alpha:event_template_field_kt_jvm_proto",
+        "//src/main/proto/wfa/measurement/reporting/v2alpha:impression_qualification_filter_kt_jvm_proto",
         "//src/main/proto/wfa/measurement/reporting/v2alpha:impression_qualification_filter_spec_kt_jvm_proto",
         "//src/main/proto/wfa/measurement/reporting/v2alpha:media_type_kt_jvm_proto",
         "//src/main/proto/wfa/measurement/reporting/v2alpha:metric_frequency_spec_kt_jvm_proto",
         "//src/main/proto/wfa/measurement/reporting/v2alpha:reporting_impression_qualification_filter_kt_jvm_proto",
         "//src/main/proto/wfa/measurement/reporting/v2alpha:reporting_interval_kt_jvm_proto",
         "//src/main/proto/wfa/measurement/reporting/v2alpha:result_group_kt_jvm_proto",
+    ],
+)
+
+kt_jvm_library(
+    name = "impression_qualification_filters_service",
+    srcs = ["ImpressionQualificationFiltersService.kt"],
+    deps = [
+        ":basic_report_proto_conversions",
+        ":metadata_principal_server_interceptor",
+        ":principal_server_interceptor",
+        ":reporting_principal",
+        ":resource_key",
+        "//src/main/kotlin/org/wfanet/measurement/api:api_key_constants",
+        "//src/main/kotlin/org/wfanet/measurement/common/api:resource_ids",
+        "//src/main/kotlin/org/wfanet/measurement/reporting/service/api:errors",
+        "//src/main/kotlin/org/wfanet/measurement/reporting/service/internal:errors",
+        "//src/main/proto/wfa/measurement/internal/reporting/v2:impression_qualification_filters_service_kt_jvm_grpc_proto",
+        "//src/main/proto/wfa/measurement/reporting/v2alpha:impression_qualification_filter_kt_jvm_proto",
+        "//src/main/proto/wfa/measurement/reporting/v2alpha:impression_qualification_filters_service_kt_jvm_grpc_proto",
+        "@wfa_common_jvm//imports/java/io/grpc:api",
     ],
 )
