--- a/src/main/kotlin/org/wfanet/measurement/securecomputation/service/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/securecomputation/service/BUILD.bazel
@@ -23,6 +23,7 @@ kt_jvm_library(
     name = "errors",
     srcs = ["Errors.kt"],
     deps = [
+        ":resource_key",
         "//src/main/kotlin/org/wfanet/measurement/common/grpc:error_info",
         "//src/main/kotlin/org/wfanet/measurement/securecomputation/service/internal:errors",
         "//src/main/proto/google/rpc:error_details_kt_jvm_proto",
