--- a/.github/workflows/scan-images.yml
+++ b/.github/workflows/scan-images.yml
@@ -83,6 +83,9 @@ jobs:
           - duchy/aws-postgres-internal-server
           - panel-exchange/forwarded-storage-daemon
           - prober/measurement-system-prober
+          - secure-computation/control-plane-api-v1alpha
+          - secure-computation/control-plane-internal-server
+          - control-plane/update-schema
     steps:
       - name: Get SARIF file path
         id: get-sarif-file-path
