--- a/.github/workflows/update-cmms.yml
+++ b/.github/workflows/update-cmms.yml
@@ -133,6 +133,18 @@ jobs:
       environment: ${{ inputs.environment }}
       apply: ${{ inputs.apply }}
 
+  # Update the Reporting system.
+  #
+  # This isn't technically part of the CMMS, but we do it here for simplicity.
+  update-control_plane:
+    uses: ./.github/workflows/configure-control-plane.yml
+    secrets: inherit
+    needs: [ publish-images, terraform ]
+    with:
+      image-tag: ${{ needs.publish-images.outputs.image-tag }}
+      environment: ${{ inputs.environment }}
+      apply: ${{ inputs.apply }}
+
   run-tests:
     if: inputs.run-tests
     needs: [
@@ -142,6 +154,7 @@ jobs:
       update-worker2-duchy,
       update-simulators,
       update-reporting-v2,
+      update-control_plane,
     ]
     uses: ./.github/workflows/run-k8s-tests.yml
     secrets: inherit
