--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -205,6 +205,19 @@ bazel_dep(
     name = "tink_cc",
     version = "2.1.3",
 )
+bazel_dep(
+    name = "rules_oci",
+    version = "2.0.0",
+)
+
+oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
+oci.pull(
+    name = "java_debug_root",
+    digest = "sha256:46b4e5494edffefed75f509f33a23a47344936a4c46ec850912ebae47163533c",
+    image = "docker.io/bellsoft/liberica-openjdk-debian:17",
+    platforms = ["linux/amd64"],
+)
+use_repo(oci, "java_debug_root")
 
 maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
 maven.artifact(
