--- a/src/main/kotlin/org/wfanet/measurement/duchy/deploy/gcloud/job/mill/liquidlegionsv3demo/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/duchy/deploy/gcloud/job/mill/liquidlegionsv3demo/BUILD.bazel
@@ -27,10 +27,10 @@ java_binary(
     ],
 )
 
-java_debug_image(
+java_image(
     name = "gcs_liquid_legions_v3_demo_mill_job_image",
+    base = "@java_debug_root",
     binary = ":GcsLiquidLegionsV3DemoMillJob",
     main_class = "org.wfanet.measurement.duchy.deploy.gcloud.job.mill.liquidlegionsv3demo.GcsLiquidLegionsV3DemoMillJobKt",
-    target_compatible_with = DISTROLESS_JAVA,
     visibility = ["//src:docker_image_deployment"],
 )
