--- a/src/main/kotlin/org/wfanet/measurement/reporting/deploy/v2/common/service/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/reporting/deploy/v2/common/service/BUILD.bazel
@@ -1,15 +1,38 @@
 load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_library")
 
-package(
-    default_visibility = [
-        "//src/test/kotlin/org/wfanet/measurement/reporting/deploy/v2/common/service:__pkg__",
-        "//src/test/kotlin/org/wfanet/measurement/reporting/service/api/v2alpha:__pkg__",
+kt_jvm_library(
+    name = "services",
+    srcs = ["DataServices.kt"],
+    visibility = [
+        "//src/main/kotlin/org/wfanet/measurement/integration/deploy/gcloud:__subpackages__",
+        "//src/main/kotlin/org/wfanet/measurement/reporting/deploy/v2/common/server:__subpackages__",
+        "//src/main/kotlin/org/wfanet/measurement/reporting/deploy/v2/gcloud/server:__subpackages__",
+        "//src/test/kotlin/org/wfanet/measurement/integration:__subpackages__",
+    ],
+    deps = [
+        "//src/main/kotlin/org/wfanet/measurement/reporting/deploy/v2/gcloud/spanner:basic_reports_service",
+        "//src/main/kotlin/org/wfanet/measurement/reporting/deploy/v2/postgres:services",
+        "//src/main/proto/wfa/measurement/internal/reporting/v2:measurement_consumers_service_kt_jvm_grpc_proto",
+        "//src/main/proto/wfa/measurement/internal/reporting/v2:measurements_service_kt_jvm_grpc_proto",
+        "//src/main/proto/wfa/measurement/internal/reporting/v2:metric_calculation_specs_service_kt_jvm_grpc_proto",
+        "//src/main/proto/wfa/measurement/internal/reporting/v2:metrics_service_kt_jvm_grpc_proto",
+        "//src/main/proto/wfa/measurement/internal/reporting/v2:report_schedule_iterations_service_kt_jvm_grpc_proto",
+        "//src/main/proto/wfa/measurement/internal/reporting/v2:report_schedules_service_kt_jvm_grpc_proto",
+        "//src/main/proto/wfa/measurement/internal/reporting/v2:reporting_sets_service_kt_jvm_grpc_proto",
+        "//src/main/proto/wfa/measurement/internal/reporting/v2:reports_service_kt_jvm_grpc_proto",
+        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/db/r2dbc",
+        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/identity",
+        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/gcloud/spanner",
     ],
 )
 
 kt_jvm_library(
     name = "impression_qualification_filters_service",
     srcs = ["ImpressionQualificationFiltersService.kt"],
+    visibility = [
+        "//src/test/kotlin/org/wfanet/measurement/reporting/deploy/v2/common/service:__pkg__",
+        "//src/test/kotlin/org/wfanet/measurement/reporting/service/api/v2alpha:__pkg__",
+    ],
     deps = [
         "//src/main/kotlin/org/wfanet/measurement/reporting/service/internal:errors",
         "//src/main/kotlin/org/wfanet/measurement/reporting/service/internal:impression_qualification_filter_mapping",
